support Series ID and Series Display

--- a/frontend/locales/en.yml
+++ b/frontend/locales/en.yml
@@ -41,6 +41,7 @@ en:
         resource_id: Resource/Accession Identifier
         resource_title: Resource/Accession Title
         series_id: Series Identifier
+        series_display: Series Display
         type: Container Type
       labels:
         label_type_label: Label Type
