--- a/frontend/locales/en.yml
+++ b/frontend/locales/en.yml
@@ -48,3 +48,4 @@ en:
         label_type_default: Letter-default
         label_type_dymo-30256: Dymo-30256 # use the label manufacturer and the type here and in the CSS. Note the hyphen!
         label_type_avery-5163: Avery-5163
+        label_type_avery-5164: Avery-5164
